Fixed nav to look better on mobile, forced footer to bottom of page

--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,29 @@
   padding: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
+  min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 a {
   color: #333;
   text-decoration: none;
+}
+
+.white-links {
+  color: #eee;
+}
+
+.navbar {
+  background-color: #333;
 }
 
 .navbar-nav > li{
@@ -69,4 +84,16 @@ pre {
     width: 90%;
   }
 
+  .navbar-nav {
+    max-width: auto;
+    max-height: 30px;
+    overflow-x: scroll;
+    font-size: 20px;
+  }
+
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
 }
